--- a/frontend/demo.html
+++ b/frontend/demo.html
@@ -40,7 +40,8 @@
     
       <!-- Everything below is information derived from photo of dog -->
       <div>
-        <label class="block text-sm font-medium text-green-700">Information derived from photo of dog:</label>
+        <label class="block text-lg font-medium text-green-700 mb-2">Information derived from photo of dog:</label>
+    
         <label class="block text-sm font-medium text-gray-700">Weight [Can estimate from photo if user doesn't know dog's weight]</label>
         <select name="weight" id="weight" class="mt-1 block w-full border-gray-300 rounded-md shadow-sm" required>
           <option value="" disabled selected>Select</option>
@@ -92,7 +93,7 @@
 
       <!-- Everything below is user input -->
       <div>
-        <label class="block text-sm font-medium text-green-700">Information from user input:</label>
+        <label class="block text-lg font-medium text-green-700 mb-2">Information from user input:</label>
         <label class="block text-sm font-medium text-gray-700">Dog Breed</label>
         <input type="text" name="breed" id="breed" class="mt-1 block w-full border-gray-300 rounded-md shadow-sm" placeholder="e.g., Labrador" required>
       </div>
@@ -157,6 +158,7 @@
         Recommended Gear
       </h2>
       <ul id="recommendation-list" class="list-disc list-inside text-gray-700"></ul>
+      <p id="recommendation-message" class="mb-4 font-medium text-gray-800"></p>
     </div>
   </section>
 
@@ -199,6 +201,7 @@
       const result = await response.json();
       const rec = result.recommendation;
   
+      document.getElementById('recommendation-message').innerHTML = `<strong>${rec.message}</strong>`;
       recommendationList.innerHTML = `
         <li><strong>Collar:</strong> ${rec.collar}</li>
         <li><strong>Harness:</strong> ${rec.harness}</li>
