--- a/frontend/demo.html
+++ b/frontend/demo.html
@@ -42,7 +42,7 @@
       <div>
         <label class="block text-lg font-medium text-green-700 mb-2">Information derived from photo of dog:</label>
     
-        <label class="block text-sm font-medium text-gray-700">Weight [Can estimate from photo if user doesn't know dog's weight]</label>
+        <label class="block text-sm font-medium text-gray-700">Weight (Can estimate from photo if user doesn't know dog's weight)</label>
         <select name="weight" id="weight" class="mt-1 block w-full border-gray-300 rounded-md shadow-sm" required>
           <option value="" disabled selected>Select</option>
           <option value="Small">Strawweight: &lt;10lbs</option>
