--- a/frontend/about.html
+++ b/frontend/about.html
@@ -35,7 +35,7 @@
   </section>
 
   <!-- Section 1 Background -->
-  <section class="bg-gray-50 py-20">
+  <section class="bg-amber-50 py-20">
     <div class="max-w-4xl mx-auto bg-white rounded shadow-md py-12 px-6">
       <h2 class="text-2xl font-bold text-blue-700 mb-4 flex items-center gap-2">
         <i data-lucide="target" class="w-5 h-5 text-blue-600"></i>
@@ -49,7 +49,7 @@
 
   <!-- Section 2 Background -->
   <section class="bg-orange-100 py-20">
-    <div class="max-w-4xl mx-auto bg-orange-50 rounded shadow-md py-16 px-6">
+    <div class="max-w-4xl mx-auto bg-white rounded shadow-md py-16 px-6">
       <h2 class="text-3xl font-bold text-orange-700 mb-6 flex items-center gap-2">
         <i data-lucide="star" class="w-6 h-6 text-orange-600"></i>
         What Makes Us Different
@@ -65,7 +65,7 @@
   </section>
 
   <!-- Section 3 Background -->
-  <section class="bg-gray-50 py-20">
+  <section class="bg-amber-50 py-20">
     <div class="max-w-4xl mx-auto bg-white rounded shadow-md py-12 px-6">
       <h2 class="text-2xl font-bold text-blue-700 mb-4 flex items-center gap-2">
         <i data-lucide="book-open" class="w-5 h-5 text-blue-600"></i>
@@ -79,7 +79,7 @@
 
   <!-- Section 4 Background -->
   <section class="bg-red-100 py-20">
-    <div class="max-w-4xl mx-auto bg-gray-100 rounded shadow-md py-12 px-6">
+    <div class="max-w-4xl mx-auto bg-white rounded shadow-md py-12 px-6">
       <h2 class="text-2xl font-bold text-blue-700 mb-6 flex items-center gap-2">
         <i data-lucide="heart" class="w-6 h-6 text-red-500"></i>
         What We Believe In
