Primarily finished adding rights reserved

--- a/frontend/why-us.html
+++ b/frontend/why-us.html
@@ -101,8 +101,8 @@
     </section>
   </main>
 
-  <footer class="bg-gray-900 bg-opacity-90 backdrop-blur-md py-6 text-center text-gray-400 text-sm mt-auto select-none">
-    &copy; 2025 DogArmor — All rights reserved.
+  <footer class="bg-white text-gray-900 py-6 text-center text-sm mt-auto select-none shadow-inner">
+    &copy; 2025 DogArmor. All rights reserved.
   </footer>
 
 </body>
