fixed UI background colors

--- a/backend/static/about.html
+++ b/backend/static/about.html
@@ -94,7 +94,7 @@
   </section>
 
   <!-- Footer -->
-  <footer class="bg-white border-t border-gray-300 py-6 text-center mt-16 text-sm text-gray-500">
+  <footer class="bg-pink-100 border-t border-gray-300 py-6 text-center text-sm text-gray-500">
     &copy; 2025 DogArmor. All rights reserved.
   </footer>
 
