--- a/backend/static/features.html
+++ b/backend/static/features.html
@@ -30,27 +30,30 @@
   <!-- Page Content Wrapper -->
   <main class="flex-grow">
 
-    <!-- Hero -->
-    <section class="py-16 px-4 text-center" data-aos="fade-right">
-      <h1 class="text-4xl font-bold text-orange-700 mb-4 flex items-center justify-center gap-2">
-        <i data-lucide="stars" class="w-7 h-7 text-orange-700"></i>
-        Key Features of DogArmor
-      </h1>
-      <p class="text-lg text-gray-600 max-w-2xl mx-auto">Smart, personalized, and built for your dog’s unique needs.</p>
-    </section>
+   <!-- Hero -->
+   <section class="py-24 px-4 text-center bg-orange-50" data-aos="fade-right">
+    <h1 class="text-4xl font-bold text-orange-700 mb-4 flex items-center justify-center gap-2">
+     <i data-lucide="stars" class="w-7 h-7 text-orange-700"></i>
+     Key Features of DogArmor
+    </h1>
+  <p class="text-lg text-orange-800 max-w-2xl mx-auto">
+    Smart, personalized, and built for your dog’s unique needs.
+   </p>
+   </section>
 
-    <!-- Features Grid -->
-    <section class="py-16 px-6 max-w-6xl mx-auto grid gap-10 md:grid-cols-2 lg:grid-cols-3">
-      <!-- Feature Card Template -->
-      <div class="bg-white p-6 rounded-xl border shadow-sm space-y-3">
-        <div class="flex items-center gap-2 text-orange-600">
-          <i data-lucide="camera" class="w-5 h-5"></i>
-          <h3 class="text-lg font-semibold">Image-Based Recognition</h3>
-        </div>
-        <p class="text-gray-700 text-sm">
-          Upload a photo of your dog to help us understand their body type and age for more accurate gear fitting.
-        </p>
+  <!-- Features Grid -->
+<section class="py-16 px-6 max-w-6xl mx-auto bg-orange-50">
+  <div class="grid gap-10 md:grid-cols-2 lg:grid-cols-3">
+    
+    <div class="bg-white p-6 rounded-xl border shadow-sm space-y-3">
+      <div class="flex items-center gap-2 text-orange-600">
+        <i data-lucide="camera" class="w-5 h-5"></i>
+        <h3 class="text-lg font-semibold">Image-Based Recognition</h3>
       </div>
+      <p class="text-gray-700 text-sm">
+        Upload a photo of your dog to help us understand their body type and age for more accurate gear fitting.
+      </p>
+    </div>
 
       <div class="bg-white p-6 rounded-xl border shadow-sm space-y-3">
         <div class="flex items-center gap-2 text-orange-600">
@@ -106,7 +109,7 @@
   </main>
 
   <!-- Footer -->
-  <footer class="bg-white py-6 text-center border-t mt-auto">
+  <footer class="bg-pink-100 py-6 text-center border-t mt-auto">
     <p class="text-sm text-gray-600">&copy; 2025 DogArmor. All rights reserved.</p>
   </footer>
 
