--- a/backend/static/how-it-works.html
+++ b/backend/static/how-it-works.html
@@ -69,7 +69,7 @@
     </section>
 
     <!-- Footer -->
-    <footer class="bg-white border-t border-gray-200 text-center text-sm text-gray-500 py-6 mt-auto">
+    <footer class="bg-pink-100 border-t border-gray-200 text-center text-sm text-gray-500 py-6 mt-auto">
       © 2025 DogArmor. All rights reserved.
     </footer>
   </div>
