--- a/backend/static/team.html
+++ b/backend/static/team.html
@@ -76,7 +76,7 @@
   </section>
 
   <!-- Footer -->
-  <footer class="bg-white border-t text-center py-4 text-sm text-gray-500 mt-auto">
+  <footer class="bg-pink-100 border-t text-center py-4 text-sm text-gray-500 mt-auto">
     &copy; 2025 DogArmor. All rights reserved.
   </footer>
 
