--- a/backend/static/demo.html
+++ b/backend/static/demo.html
@@ -163,7 +163,7 @@
   </section>
 
   <!-- Footer -->
-  <footer class="bg-white py-6 text-center mt-16 border-t">
+  <footer class="bg-pink-100 py-6 text-center mt-16 border-t">
     <p class="text-sm text-gray-600">&copy; 2025 DogArmor. All rights reserved.</p>
   </footer>
 
