Yet more UI Changes

--- a/backend/static/how-it-works.html
+++ b/backend/static/how-it-works.html
@@ -27,12 +27,12 @@
 
     <!-- How It Works Section -->
     <section class="py-20 px-6 max-w-5xl mx-auto">
-      <h1 class="text-4xl font-bold text-primary text-center mb-14">How It Works</h1>
+      <h1 class="text-4xl font-extrabold text-blue-700 text-center mb-4 ">How It Works</h1>
 
       <div class="grid grid-cols-1 md:grid-cols-2 gap-10">
         <!-- Step 1 -->
         <div class="bg-surface p-6 rounded-xl shadow-md border border-muted">
-          <h2 class="text-2xl font-semibold text-primary mb-2 flex items-center">
+          <h2 class="text-2xl font-extrabold text-blue-700 mb-4 flex items-center">
             <svg class="w-5 h-5 text-accent mr-2" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24"><path d="M12 11c0 2.21-1.79 4-4 4S4 13.21 4 11s1.79-4 4-4 4 1.79 4 4Z"/><path d="M20 21v-2a4 4 0 0 0-4-4h-5"/></svg>
             1. Upload a Picture of Your Dog
           </h2>
@@ -41,7 +41,7 @@
 
         <!-- Step 2 -->
         <div class="bg-surface p-6 rounded-xl shadow-md border border-muted">
-          <h2 class="text-2xl font-semibold text-primary mb-2 flex items-center">
+          <h2 class="text-2xl font-extrabold text-blue-700 mb-4 flex items-center">
             <svg class="w-5 h-5 text-accent mr-2" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24"><path d="M12 2a10 10 0 0 0-10 10v6a2 2 0 0 0 2 2h5l1 2 1-2h5a2 2 0 0 0 2-2v-6a10 10 0 0 0-10-10Z"/></svg>
             2. Tell Us About Their Behavior
           </h2>
@@ -50,7 +50,7 @@
 
         <!-- Step 3 -->
         <div class="bg-surface p-6 rounded-xl shadow-md border border-muted">
-          <h2 class="text-2xl font-semibold text-primary mb-2 flex items-center">
+          <h2 class="text-2xl font-extrabold text-blue-700 mb-4 flex items-center">
             <svg class="w-5 h-5 text-accent mr-2" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24"><path d="M21 15v4a2 2 0 0 1-2 2h-4"/><path d="M3 15v4a2 2 0 0 0 2 2h4"/><path d="M3 10V6a2 2 0 0 1 2-2h4"/><path d="M21 10V6a2 2 0 0 0-2-2h-4"/><path d="M12 12a3 3 0 1 0 0-6 3 3 0 0 0 0 6Z"/></svg>
             3. Get Smart Recommendations
           </h2>
@@ -59,7 +59,7 @@
 
         <!-- Step 4 -->
         <div class="bg-surface p-6 rounded-xl shadow-md border border-muted">
-          <h2 class="text-2xl font-semibold text-primary mb-2 flex items-center">
+          <h2 class="text-2xl font-extrabold text-blue-700 mb-4 flex items-center">
             <svg class="w-5 h-5 text-accent mr-2" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24"><path d="M12 2a10 10 0 1 1 0 20"/></svg>
             4. Explore or Shop
           </h2>
@@ -76,3 +76,4 @@
 
 </body>
 </html>
+ 
