--- a/backend/static/features.html
+++ b/backend/static/features.html
@@ -36,14 +36,14 @@
      <i data-lucide="stars" class="w-7 h-7 text-orange-700"></i>
      Key Features of DogArmor
     </h1>
-  <p class="text-lg text-orange-800 max-w-2xl mx-auto">
+  <p class="text-2xl text-orange-800 max-w-2xl mx-auto">
     Smart, personalized, and built for your dog’s unique needs.
    </p>
    </section>
 
   <!-- Features Grid -->
-<section class="py-16 px-6 max-w-6xl mx-auto bg-orange-50">
-  <div class="grid gap-10 md:grid-cols-2 lg:grid-cols-3">
+  <div class ="bg-orange-100 rounded-xl p-8 mt-[-2rem]">
+    <div class="max-w-6xl mx-auto grid gap-10 md:grid-cols-2 lg:grid-cols-3">
     
     <div class="bg-white p-6 rounded-xl border shadow-sm space-y-3">
       <div class="flex items-center gap-2 text-orange-600">
@@ -104,7 +104,7 @@
           We never sell your data. Everything is private, secure, and in your control.
         </p>
       </div>
-    </section>
+    </div>
 
   </main>
 
